// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationButton should render active button 1`] = `
<button
  className="mfui-beta-pagination-button mfui-beta-pagination-button_active mfui-beta-pagination-button_theme_black"
  disabled={false}
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`PaginationButton should render component 1`] = `
<button
  className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_black"
  disabled={false}
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`PaginationButton should render disabled button 1`] = `
<button
  className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_black"
  disabled={true}
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`PaginationButton should render with optional props 1`] = `
<button
  className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_white custom-class-name"
  disabled={false}
  onClick={[Function]}
>
  Click me
</button>
`;
